# sjukSchackbot

./: CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Run.cpp  Run.h  generateBoard.cpp  generateBoard.h  main.cpp  yooo.txt
